# treeland-autoui-mcp

./: .gitmodules  README.en.md  README.md  README.zh-CN.md  client_env.sh  langchain_example.py  opencode.json  package-lock.json  pyproject.toml  requirements.txt  requirements_ai.txt  requirements_client.txt  test.md  windowtree.py
ai_controller/: __init__.py  mcp_remote_autogui.py  remote_client.py
function/: app_operation.py  get_image.py  match_img.py  screen_actions.py
function/uos_public_operation/: __init__.py  config.py  wait.py
function/uos_public_operation/autotool/autotool_amd/: autotool  ld-linux-x86-64.so.2  libc.so.6  libm.so.6  libpthread.so.0
function/uos_public_operation/autotool/autotool_arm/: autotool  ld-linux-aarch64.so.1  libc.so.6  libgcc_s.so.1  libm.so.6  libpthread.so.0  libstdc++.so.6
function/uos_public_operation/autotool/autotool_loongarch/: autotool  ld.so.1  libc.so.6  libgcc_s.so.1  libm.so.6  libpthread.so.0  libstdc++.so.6  test.sh
function/uos_public_operation/autotool/autotool_mips/: autotool  ld.so.1  libc.so.6  libgcc_s.so.1  libm.so.6  libpthread.so.0  libstdc++.so.6
function/uos_public_operation/autotool/autotool_sw/: autotool  ld-linux.so.2  libc.so.6.1  libgcc_s.so.1  libm.so.6.1  libpthread.so.0  libstdc++.so.6
function/uos_public_operation/dock/: dock_operation.py
function/uos_public_operation/file/: dialog.py  file_manager.py
function/uos_public_operation/image/: match_operation.py
function/uos_public_operation/launcher/: launcher_operation.py
langchain_settings/: mcp_config.json
proto/: treeland_remote.proto
remote/: __init__.py  actions.py  auth.py  client.py  exec_cmd.py  proto_loader.py  screenshot.py  server.py
scripts/: setup_build_env.sh  setup_env.sh  setup_run_env.sh
src/mcp_autogui/: mcp_autogui_main.py  spatial_fusion.py
tests/: app_wps.sh  conftest.py  desktop_demo.py
tests/browser/: app_open_browser_tab.sh  test_open_browser_tab.py
tests/copy_x11_wayland/: __init__.py  app_copy_x11_wayland.sh  test1.txt  test_copy_x11-wayland.py  测试文档.docx  测试文稿.pptx  测试表格.xlsx
tests/kwin/: __init__.py  app_kwin_stress.sh  app_maidian_top.sh  app_openclose.sh  app_opentab.sh  app_switch_compositing_status.sh  app_test_cpu.sh  kwin-log-config.sh  test_2D_3D.py  test_cpu.py  test_kwin_stress.py  test_mouse_move.py  test_mouse_move_multiscreen.py  test_screenshot.py  test_switch_compositing_status.py  test_tab_action.py
tests/maidian/: __init__.py  app_move_split_window.sh  test_resize_window.py  test_split_screen.py
tests/mail/: test_mail_function.py
tests/pingan/: test_pingan.py  test_pingan_function.py
tests/screenshot_recording/: app_screen_video_closed_windows.sh  app_screenshot_wechat.sh  test_screen_video_closed_windows.py  test_screenshot_wechat.py
tests/splitview/: app_split_browser_screen.sh  test_split_browser_screen.py
tests/treeland/: app_test_cpu.sh  test_cpu.py  test_mouse_move_multiscreen.py  test_treeland_stress.py
tests/win_tube/: app_alt_tab_action.sh  app_context_menu.sh  app_copying_closed_windows.sh  app_create_workspace.sh  app_ctrl_alt_delete.sh  app_display_mode_switch_and_logout.sh  app_move_contorl_center_window.sh  app_openclosed_terminal.sh  app_win.sh  test_alt_tab_action.py  test_context_menu.py  test_copying_closed_windows.py  test_create_workspace.py  test_ctrl_alt_delete.py  test_display_mode_switch_and_logout.py  test_move_contorl_center_window.py  test_move_window.py  test_openclosed_terminal.py  test_sougou_input.py  test_win.py
tests/wps/: app_wps_copy.sh  test2.txt  test_excel_function.py  test_ppt_function.py  test_wps_copy.py  test_wps_function.py
