[project]
name = "treeland-autogui-mcp"
version = "0.1.0"
description = "Automatic operation of on-screen GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "Pillow>=10.4.0",
    "pyautogui",
    "uvicorn>=0.34.0",
    "pyperclip>=1.9.0",
    "mcp[cli]>=1.3.0",
    "requests>=2.32.3",
]
license = {text = "MIT License"}
license-files = ["LICENSE"]

[project.scripts]
treeland-autogui-mcp = "mcp_autogui:main"

[tool.hatch.build.targets.wheel]
packages = [
  "src/mcp_autogui"
]

[project.optional-dependencies]
langchain = [
    "langchain-mcp",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-openai>=0.3.6",
    "langgraph",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
langchain-mcp = { git = "https://github.com/NON906/langchain-mcp.git", branch = "main" }
pyautogui = { git = "https://github.com/zorowk/pyautogui.git", branch = "master" }
